# Stark-prover

./: Cargo.toml  Readme.md
benches/: field_bench.rs  poly_lang.rs  poly_ops.rs
src/: lib.rs  main.rs  utils.rs
src/channel/: channel.rs
src/fields/: README.md  element.rs  mod.rs
src/fri/: README.md  coset_fri.rs  fri_commit.rs  fri_verify.rs  mod.rs
src/merkle/: mod.rs
src/polynomial/: README.md  interpolation.rs  mod.rs  ops.rs
src/trace/: fibonacci.rs
